{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 638,
  "lineage": "a15f357f-7f57-57bd-5d70-3ca04bb2581c",
  "resources": [
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_eip",
      "name": "foryou_eip",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c490e313cc94e9bc",
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:elastic-ip/eipalloc-0c490e313cc94e9bc",
            "domain": "vpc",
            "id": "eipalloc-0c490e313cc94e9bc",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-76-230.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.76.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_instance",
      "name": "foryou_was",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ab52e5e226ec1b8",
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:instance/i-0084de5267162b588",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0084de5267162b588",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "foryou",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f64b37b9aa0cd57",
            "private_dns": "ip-10-0-2-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.11",
            "public_dns": "ec2-43-203-211-248.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.211.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081130c7f15dd043d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053cf58dac635003d",
            "tags": {
              "Name": "foryou-was-c"
            },
            "tags_all": {
              "Name": "foryou-was-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4caceb92809d638"
            ]
          },
          "dependencies": [
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.was",
            "module.pjt.aws_vpc.foryou-vpc",
            "module.pjt.data.aws_ami.amzn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ab52e5e226ec1b8",
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:instance/i-0018af5a4472c30e8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0018af5a4472c30e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "foryou",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b69b5cc6a9238e94",
            "private_dns": "ip-10-0-3-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.11",
            "public_dns": "ec2-54-180-98-7.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.98.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0872223cca9b3bc2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d41fa98f4c71255f",
            "tags": {
              "Name": "foryou-was-c"
            },
            "tags_all": {
              "Name": "foryou-was-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4caceb92809d638"
            ]
          },
          "dependencies": [
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.was",
            "module.pjt.aws_vpc.foryou-vpc",
            "module.pjt.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_instance",
      "name": "foryou_web",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ab52e5e226ec1b8",
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:instance/i-00303c8534466c97e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00303c8534466c97e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "foryou",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d7c19b770621cb2c",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-38-153-245.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.153.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0fe988d00bffe10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e05cf4e78495d3d2",
            "tags": {
              "Name": "foryou-web-a"
            },
            "tags_all": {
              "Name": "foryou-web-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4caceb92809d638"
            ]
          },
          "dependencies": [
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc",
            "module.pjt.data.aws_ami.amzn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ab52e5e226ec1b8",
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:instance/i-00f34d40350013e21",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f34d40350013e21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "foryou",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b7a96e278b91a106",
            "private_dns": "ip-10-0-1-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-43-201-32-219.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.32.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0285d156077f0b7bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f24d98be9ae2c90",
            "tags": {
              "Name": "foryou-web-c"
            },
            "tags_all": {
              "Name": "foryou-web-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4caceb92809d638"
            ]
          },
          "dependencies": [
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc",
            "module.pjt.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "foryou-ig",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:internet-gateway/igw-06eb437d8b68b5a1c",
            "id": "igw-06eb437d8b68b5a1c",
            "owner_id": "905418168845",
            "tags": {
              "Name": "foryou-ig"
            },
            "tags_all": {
              "Name": "foryou-ig"
            },
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_lb",
      "name": "foryou_was_lb",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:loadbalancer/app/foryou-was-lb/0c320c11f9c3e721",
            "arn_suffix": "app/foryou-was-lb/0c320c11f9c3e721",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "foryou-was-lb-1096409.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:loadbalancer/app/foryou-was-lb/0c320c11f9c3e721",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "foryou-was-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d4caceb92809d638"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-053cf58dac635003d"
              },
              {
                "subnet_id": "subnet-0d41fa98f4c71255f"
              }
            ],
            "subnets": [
              "subnet-053cf58dac635003d",
              "subnet-0d41fa98f4c71255f"
            ],
            "tags": {
              "Name": "foryou-was-lb"
            },
            "tags_all": {
              "Name": "foryou-was-lb"
            },
            "vpc_id": "vpc-083c234f4c0ca7b6c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.was",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_lb",
      "name": "foryou_web_lb",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:loadbalancer/app/foryou-web-lb/cfd6094198ec6383",
            "arn_suffix": "app/foryou-web-lb/cfd6094198ec6383",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "foryou-web-lb-69921123.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:loadbalancer/app/foryou-web-lb/cfd6094198ec6383",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "foryou-web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d4caceb92809d638"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f24d98be9ae2c90"
              },
              {
                "subnet_id": "subnet-0e05cf4e78495d3d2"
              }
            ],
            "subnets": [
              "subnet-01f24d98be9ae2c90",
              "subnet-0e05cf4e78495d3d2"
            ],
            "tags": {
              "Name": "foryou-web-lb"
            },
            "tags_all": {
              "Name": "foryou-web-lb"
            },
            "vpc_id": "vpc-083c234f4c0ca7b6c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cyi_albli_web",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:listener/app/foryou-web-lb/cfd6094198ec6383/cc086132cbe8b64a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-web/53bad96c6f9d89e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:listener/app/foryou-web-lb/cfd6094198ec6383/cc086132cbe8b64a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:loadbalancer/app/foryou-web-lb/cfd6094198ec6383",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "foryou-albli"
            },
            "tags_all": {
              "Name": "foryou-albli"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pjt.aws_lb.foryou_web_lb",
            "module.pjt.aws_lb_target_group.foryou_albtg_web",
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "foryou_albli",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:listener/app/foryou-was-lb/0c320c11f9c3e721/8b2df2cf93e3ff4e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-was/2820ff94af5a22bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:listener/app/foryou-was-lb/0c320c11f9c3e721/8b2df2cf93e3ff4e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:loadbalancer/app/foryou-was-lb/0c320c11f9c3e721",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "foryou-albli"
            },
            "tags_all": {
              "Name": "foryou-albli"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pjt.aws_lb.foryou_was_lb",
            "module.pjt.aws_lb_target_group.foryou_albtg_was",
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.was",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "foryou_albtg_was",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-was/2820ff94af5a22bd",
            "arn_suffix": "targetgroup/foryou-albtg-was/2820ff94af5a22bd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-was/2820ff94af5a22bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "foryou-albtg-was",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cforyou-albtg-was"
            },
            "tags_all": {
              "Name": "cforyou-albtg-was"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "foryou_albtg_web",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-web/53bad96c6f9d89e3",
            "arn_suffix": "targetgroup/foryou-albtg-web/53bad96c6f9d89e3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-web/53bad96c6f9d89e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "foryou-albtg-web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cforyou-albtg-web"
            },
            "tags_all": {
              "Name": "cforyou-albtg-web"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "foryou_albat_was",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-was/2820ff94af5a22bd-2024071608250981210000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-was/2820ff94af5a22bd",
            "target_id": "i-0084de5267162b588"
          },
          "dependencies": [
            "module.pjt.aws_instance.foryou_was",
            "module.pjt.aws_lb_target_group.foryou_albtg_was",
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.was",
            "module.pjt.aws_vpc.foryou-vpc",
            "module.pjt.data.aws_ami.amzn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-was/2820ff94af5a22bd-2024071608250974290000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-was/2820ff94af5a22bd",
            "target_id": "i-0018af5a4472c30e8"
          },
          "dependencies": [
            "module.pjt.aws_instance.foryou_was",
            "module.pjt.aws_lb_target_group.foryou_albtg_was",
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.was",
            "module.pjt.aws_vpc.foryou-vpc",
            "module.pjt.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "foryou_albat_web",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-web/53bad96c6f9d89e3-20240716082509626900000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-web/53bad96c6f9d89e3",
            "target_id": "i-00303c8534466c97e"
          },
          "dependencies": [
            "module.pjt.aws_instance.foryou_web",
            "module.pjt.aws_lb_target_group.foryou_albtg_web",
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc",
            "module.pjt.data.aws_ami.amzn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-web/53bad96c6f9d89e3-20240716082509536300000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:905418168845:targetgroup/foryou-albtg-web/53bad96c6f9d89e3",
            "target_id": "i-00f34d40350013e21"
          },
          "dependencies": [
            "module.pjt.aws_instance.foryou_web",
            "module.pjt.aws_lb_target_group.foryou_albtg_web",
            "module.pjt.aws_security_group.foryou_sgweb",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc",
            "module.pjt.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "foryou_nigw",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c490e313cc94e9bc",
            "association_id": "eipassoc-04cf5779fdc760e7c",
            "connectivity_type": "public",
            "id": "nat-07c7185a4e44a88bd",
            "network_interface_id": "eni-02b2a374ce4c9f82c",
            "private_ip": "10.0.0.21",
            "public_ip": "3.37.76.230",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e05cf4e78495d3d2",
            "tags": {
              "Name": "foryou-nigw"
            },
            "tags_all": {
              "Name": "foryou-nigw"
            }
          },
          "dependencies": [
            "module.pjt.aws_eip.foryou_eip",
            "module.pjt.aws_internet_gateway.foryou-ig",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "foryou_nrt",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:route-table/rtb-04384e32b1f48a938",
            "id": "rtb-04384e32b1f48a938",
            "owner_id": "905418168845",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07c7185a4e44a88bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foryou-nrt"
            },
            "tags_all": {
              "Name": "foryou-nrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pjt.aws_eip.foryou_eip",
            "module.pjt.aws_internet_gateway.foryou-ig",
            "module.pjt.aws_nat_gateway.foryou_nigw",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "foryou_rt",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:route-table/rtb-0a34f167bb4141b0b",
            "id": "rtb-0a34f167bb4141b0b",
            "owner_id": "905418168845",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06eb437d8b68b5a1c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foryou-rt"
            },
            "tags_all": {
              "Name": "foryou-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pjt.aws_internet_gateway.foryou-ig",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cyi_nrtas_da",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e75a08905efdbaa9",
            "route_table_id": "rtb-04384e32b1f48a938",
            "subnet_id": "subnet-06c1a4c88c0d618a1"
          },
          "dependencies": [
            "module.pjt.aws_eip.foryou_eip",
            "module.pjt.aws_internet_gateway.foryou-ig",
            "module.pjt.aws_nat_gateway.foryou_nigw",
            "module.pjt.aws_route_table.foryou_nrt",
            "module.pjt.aws_subnet.db",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ed90a6d43a12470",
            "route_table_id": "rtb-04384e32b1f48a938",
            "subnet_id": "subnet-04f4ab32e989c48d3"
          },
          "dependencies": [
            "module.pjt.aws_eip.foryou_eip",
            "module.pjt.aws_internet_gateway.foryou-ig",
            "module.pjt.aws_nat_gateway.foryou_nigw",
            "module.pjt.aws_route_table.foryou_nrt",
            "module.pjt.aws_subnet.db",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cyi_nrtas_wa",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b19ddc2701aa916e",
            "route_table_id": "rtb-04384e32b1f48a938",
            "subnet_id": "subnet-053cf58dac635003d"
          },
          "dependencies": [
            "module.pjt.aws_eip.foryou_eip",
            "module.pjt.aws_internet_gateway.foryou-ig",
            "module.pjt.aws_nat_gateway.foryou_nigw",
            "module.pjt.aws_route_table.foryou_nrt",
            "module.pjt.aws_subnet.was",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c092308ca9239061",
            "route_table_id": "rtb-04384e32b1f48a938",
            "subnet_id": "subnet-0d41fa98f4c71255f"
          },
          "dependencies": [
            "module.pjt.aws_eip.foryou_eip",
            "module.pjt.aws_internet_gateway.foryou-ig",
            "module.pjt.aws_nat_gateway.foryou_nigw",
            "module.pjt.aws_route_table.foryou_nrt",
            "module.pjt.aws_subnet.was",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "foryou_rtas",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034d254a4fd75f677",
            "route_table_id": "rtb-0a34f167bb4141b0b",
            "subnet_id": "subnet-0e05cf4e78495d3d2"
          },
          "dependencies": [
            "module.pjt.aws_internet_gateway.foryou-ig",
            "module.pjt.aws_route_table.foryou_rt",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1b0ac034494f3a3",
            "route_table_id": "rtb-0a34f167bb4141b0b",
            "subnet_id": "subnet-01f24d98be9ae2c90"
          },
          "dependencies": [
            "module.pjt.aws_internet_gateway.foryou-ig",
            "module.pjt.aws_route_table.foryou_rt",
            "module.pjt.aws_subnet.web",
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "foryou_sgweb",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:security-group/sg-0d4caceb92809d638",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4caceb92809d638",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "905418168845",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:subnet/subnet-06c1a4c88c0d618a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c1a4c88c0d618a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418168845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-db-pri-a",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "tags_all": {
              "Name": "foryou-db-pri-a",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:subnet/subnet-04f4ab32e989c48d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f4ab32e989c48d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418168845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-db-pri-c",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "tags_all": {
              "Name": "foryou-db-pri-c",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:subnet/subnet-053cf58dac635003d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053cf58dac635003d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418168845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-was-pri-a",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "tags_all": {
              "Name": "foryou-was-pri-a",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:subnet/subnet-0d41fa98f4c71255f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d41fa98f4c71255f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418168845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-was-pri-c",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "tags_all": {
              "Name": "foryou-was-pri-c",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:subnet/subnet-0e05cf4e78495d3d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e05cf4e78495d3d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418168845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-web-pub-a",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "tags_all": {
              "Name": "foryou-web-pub-a",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:subnet/subnet-01f24d98be9ae2c90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f24d98be9ae2c90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418168845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-web-pub-c",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "tags_all": {
              "Name": "foryou-web-pub-c",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "vpc_id": "vpc-083c234f4c0ca7b6c"
          },
          "dependencies": [
            "module.pjt.aws_vpc.foryou-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pjt",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "foryou-vpc",
      "provider": "module.pjt.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:905418168845:vpc/vpc-083c234f4c0ca7b6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078a46cf87662c8cc",
            "default_route_table_id": "rtb-016b2794f082d0f2d",
            "default_security_group_id": "sg-05a775abf16840397",
            "dhcp_options_id": "dopt-04c2af0c62919b10e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083c234f4c0ca7b6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016b2794f082d0f2d",
            "owner_id": "905418168845",
            "tags": {
              "Name": "foryou-vpc",
              "kubernetes.io/cluster/foryou": "shared"
            },
            "tags_all": {
              "Name": "foryou-vpc",
              "kubernetes.io/cluster/foryou": "shared"
            }
          }
        }
      ]
    }
  ]
}